[package]
name = "webfinger"
authors = ["Seungjin Kim <seungjin@duck.com>"]
description = ""
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Useful crate to handle errors.
anyhow = "1"
# Crate to simplify working with bytes.
bytes = "1"
# General-purpose crate with common HTTP types.
http = "0.2"
serde_json = "1.0.140"
# The Spin SDK.
spin-sdk = { git = "https://github.com/spinframework/spin-rust-sdk" }
url = "2.5.4"


[workspace]
